syntax = "proto3";
package ecom;

import "health.proto";
import "paginated.proto";

service EcomService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc GetProducts(paginated.PaginatedRequest) returns (GetProductsResponse);
  rpc GetHealth(health.GetHealthRequest) returns (health.GetHealthResponse);
}

message GetProductRequest {
    string product_id = 1;
}

message GetProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string slug = 4;
    string org_id = 5;
}

message GetProductsResponse {
    repeated GetProductResponse products = 1;
    int32 total_count = 2;
    int32 page = 3;
    optional int32  next_cursor = 4;
}
